--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 permalink: /:year-:month-:day-:slug
 
-plugins:
-  - jekyll-redirect-from
+# plugins:
+  # - jekyll-redirect-from
 
 defaults:
   - scope:
